# AzureML_GUI_Mock

./: README.md  TODO.RST  app_setup.py  cl_requirements.txt  cloud_app_setup.py  config_loader.py  main_app.py  main_cloud_app.py  pyproject.toml  requirements.txt
cl_be/: azure_auth_handler.py  azure_blob_handler.py  azure_ml_handler.py  github_handler.py
cl_cb/: azure_callbacks.py  azure_ml_callbacks.py  azure_ml_job_monitor_callbacks.py  blob_callbacks.py  github_callbacks.py
cl_ui/: azure_auth_ui.py  azure_ml_job_monitor_ui.py  azure_ml_ui.py  azure_storage_ui.py  github_ui.py  navigation_panel.py  status_bar.py  ui_helpers.py
cloud_configs/: cloud_config.yaml
cloud_utils/: loading_screen.py  zoomcontroller.py
