[project]
name = "azure-cloud-send-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.25.3",
    "azure-mgmt-core>=1.6.0",
    "azure-mgmt-storage>=25.0.0",
    "azure-mgmt-subscription>=3.1.1",
    "azure-storage-blob>=12.30.0",
    "azure-storage-queue>=12.17.0",
    "pillow>=11.3.0",
    "pygithub>=2.6.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "screeninfo>=0.8.1",
]
